//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  userId Int [pk, increment]
  username String [unique, not null]
  password String [not null]
  firstName String [not null]
  lastName String [not null]
  email String [not null]
  createdAt DateTime [default: `now()`, not null]
  bannedAt DateTime
  Role Role [not null]
  imageID Int
}

Table Ticket {
  ticketID Int [pk, increment]
  title String [not null]
  description String [not null]
  TicketCategory TicketCategory [not null]
  userID Int [not null]
  dormID Int [not null]
}

Table Dorm {
  dormID Int [pk, increment]
  userID Int [unique, not null]
  name String [not null]
  address String [not null]
  latitude Float [not null]
  longitude Float [not null]
  description String [not null]
  createdAt DateTime [default: `now()`, not null]
  waterRate String [not null]
  electricityRate String [not null]
  approvedAt DateTime
  approvedBy String
  contactTelnum String [not null]
  contactFacebook String
  contactLine String
  landmarkID Int [not null]
}

Table Room {
  roomID Int [pk, increment]
  dormID Int [not null]
  width Float [not null]
  length Float [not null]
  price Float [not null]
  name String [not null]
}

Table Landmark {
  landmarkID Int [pk, increment]
  parentUniversityID Int
  name String [not null]
}

Table Accommodation {
  accommodationID Int [pk, increment]
  dormID Int
  roomID Int
  accommodationTypeID Int [not null]
}

Table AccommodationType {
  accommodationTypeID Int [pk, increment]
  accommodationName String [not null]
}

Table Rating {
  ratingID Int [pk, increment]
  dormID Int [not null]
  userID Int [not null]
  score Int [not null]
}

Table Comment {
  commentID Int [pk, increment]
  userID Int [not null]
  description String [not null]
  dormID Int [not null]
  parentCommentID Int
}

Table Image {
  imageID Int [pk, increment]
  url String [unique, not null]
  dormID Int [not null]
  roomID Int [not null]
}

Enum Role {
  USER
  DORM_OWNER
  ADMIN
}

Enum TicketCategory {
  WEB
  USER
  DORM
  OTHER
}

Ref: User.imageID > Image.imageID

Ref: Ticket.userID > User.userId [delete: Cascade]

Ref: Ticket.dormID > Dorm.dormID [delete: Cascade]

Ref: Dorm.userID - User.userId [delete: Cascade]

Ref: Dorm.landmarkID > Landmark.landmarkID

Ref: Room.dormID > Dorm.dormID [delete: Cascade]

Ref: Landmark.parentUniversityID - Landmark.landmarkID [delete: Cascade]

Ref: Accommodation.dormID > Dorm.dormID

Ref: Accommodation.roomID > Room.roomID

Ref: Accommodation.accommodationTypeID > AccommodationType.accommodationTypeID

Ref: Rating.dormID > Dorm.dormID [delete: Cascade]

Ref: Rating.userID > User.userId [delete: Cascade]

Ref: Comment.userID > User.userId [delete: Cascade]

Ref: Comment.dormID > Dorm.dormID [delete: Cascade]

Ref: Comment.parentCommentID - Comment.commentID [delete: Cascade]

Ref: Image.dormID > Dorm.dormID [delete: Cascade]

Ref: Image.roomID > Room.roomID [delete: Cascade]